Fix ugly stretching of logo
With a dirty hack

--- a/app/pages/index/background/background.css
+++ b/app/pages/index/background/background.css
@@ -40,13 +40,14 @@
   margin: auto;
 }
 
-.tesseract {
+.tesseract svg {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   width: 100%;
+  height: auto;
   max-height: calc(100% / 8 * 7);
   min-height: calc(100% / 8 * 7);
   z-index: 4;
